Moved DataTime utils to a module of it's own, so that it can be share across presto-main and presto-iceberg.